// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdBanner should render with many props assigned 1`] = `
<OutboundLink
  analyticsEventLabel="AdBanner Hit"
  className="AdBanner-class AdBanner"
  hasIcon={false}
  href="www.testMe.com"
>
  <div
    className="adBannerContent"
  >
    <div
      className="adBannerImageContainer"
    >
      <img
        alt="Alt text test"
        className="adBannerImage"
        src="test-image.jpg"
      />
    </div>
    <h6
      className="adBannerText"
    >
      Test
    </h6>
  </div>
</OutboundLink>
`;

exports[`AdBanner should render with required props 1`] = `
<OutboundLink
  analyticsEventLabel="AdBanner Hit"
  className="AdBanner"
  hasIcon={false}
  href="www.test.com"
>
  <div
    className="adBannerContent"
  >
    <div
      className="adBannerImageContainer"
    >
      <img
        alt="Some text"
        className="adBannerImage"
        src="www.imagetest.com"
      />
    </div>
    <h6
      className="adBannerText"
    >
      Test
    </h6>
  </div>
</OutboundLink>
`;
